fix bottom buttons having a slightly higher gap than expected

--- a/src/styles.css
+++ b/src/styles.css
@@ -139,7 +139,7 @@ button.half-height {height: 60px}
 button.half-height p {font-size: 0.6em}
 button.secondary-btn {
 	position:fixed;
-	top: 75.5%;
+	top: 75.3%;
 }
 button.secondary-btn.left {
 	left: 300px
